--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -936,10 +936,10 @@
      "output_type": "stream",
      "text": [
       "ChromaKeyPlusDespill :\n",
-      "Using the  ChromaKeyPlusDespill  method on picture 1 results in an average pixel difference to the ideal result of 2.82\n",
-      "Using the  ChromaKeyPlusDespill  method on picture 2 results in an average pixel difference to the ideal result of 0.78\n",
-      "Using the  ChromaKeyPlusDespill  method on picture 3 results in an average pixel difference to the ideal result of 1.53\n",
-      "Using the  ChromaKeyPlusDespill  method on picture 4 results in an average pixel difference to the ideal result of 0.87\n"
+      "Using the  ChromaKeyPlusDespill  method on picture 1 results in an average pixel difference to the ideal result of 2.82 and  87.49 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespill  method on picture 2 results in an average pixel difference to the ideal result of 0.78 and  96.73 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespill  method on picture 3 results in an average pixel difference to the ideal result of 1.53 and  91.53 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespill  method on picture 4 results in an average pixel difference to the ideal result of 0.87 and  95.33 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -959,10 +959,10 @@
      "output_type": "stream",
      "text": [
       "ChromaKeyPlusDespillv2 :\n",
-      "Using the  ChromaKeyPlusDespillv2  method on picture 1 results in an average pixel difference to the ideal result of 3.34\n",
-      "Using the  ChromaKeyPlusDespillv2  method on picture 2 results in an average pixel difference to the ideal result of 0.76\n",
-      "Using the  ChromaKeyPlusDespillv2  method on picture 3 results in an average pixel difference to the ideal result of 1.75\n",
-      "Using the  ChromaKeyPlusDespillv2  method on picture 4 results in an average pixel difference to the ideal result of 0.91\n"
+      "Using the  ChromaKeyPlusDespillv2  method on picture 1 results in an average pixel difference to the ideal result of 3.34 and  87.12 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespillv2  method on picture 2 results in an average pixel difference to the ideal result of 0.76 and  96.73 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespillv2  method on picture 3 results in an average pixel difference to the ideal result of 1.75 and  91.52 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyPlusDespillv2  method on picture 4 results in an average pixel difference to the ideal result of 0.91 and  95.3 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -982,10 +982,10 @@
      "output_type": "stream",
      "text": [
       "ChromaKeyVersion1a :\n",
-      "Using the  ChromaKeyVersion1a  method on picture 1 results in an average pixel difference to the ideal result of 3.04\n",
-      "Using the  ChromaKeyVersion1a  method on picture 2 results in an average pixel difference to the ideal result of 0.76\n",
-      "Using the  ChromaKeyVersion1a  method on picture 3 results in an average pixel difference to the ideal result of 1.67\n",
-      "Using the  ChromaKeyVersion1a  method on picture 4 results in an average pixel difference to the ideal result of 0.81\n"
+      "Using the  ChromaKeyVersion1a  method on picture 1 results in an average pixel difference to the ideal result of 3.04 and  87.46 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion1a  method on picture 2 results in an average pixel difference to the ideal result of 0.76 and  96.73 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion1a  method on picture 3 results in an average pixel difference to the ideal result of 1.67 and  91.53 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion1a  method on picture 4 results in an average pixel difference to the ideal result of 0.81 and  95.38 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1005,10 +1005,10 @@
      "output_type": "stream",
      "text": [
       "ChromaKeyVersion2 :\n",
-      "Using the  ChromaKeyVersion2  method on picture 1 results in an average pixel difference to the ideal result of 2.59\n",
-      "Using the  ChromaKeyVersion2  method on picture 2 results in an average pixel difference to the ideal result of 0.76\n",
-      "Using the  ChromaKeyVersion2  method on picture 3 results in an average pixel difference to the ideal result of 1.57\n",
-      "Using the  ChromaKeyVersion2  method on picture 4 results in an average pixel difference to the ideal result of 0.81\n"
+      "Using the  ChromaKeyVersion2  method on picture 1 results in an average pixel difference to the ideal result of 2.59 and  87.67 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion2  method on picture 2 results in an average pixel difference to the ideal result of 0.76 and  96.73 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion2  method on picture 3 results in an average pixel difference to the ideal result of 1.57 and  91.52 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion2  method on picture 4 results in an average pixel difference to the ideal result of 0.81 and  95.38 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1028,10 +1028,10 @@
      "output_type": "stream",
      "text": [
       "ChromaKeyVersion3 :\n",
-      "Using the  ChromaKeyVersion3  method on picture 1 results in an average pixel difference to the ideal result of 6.33\n",
-      "Using the  ChromaKeyVersion3  method on picture 2 results in an average pixel difference to the ideal result of 21.36\n",
-      "Using the  ChromaKeyVersion3  method on picture 3 results in an average pixel difference to the ideal result of 6.27\n",
-      "Using the  ChromaKeyVersion3  method on picture 4 results in an average pixel difference to the ideal result of 11.9\n"
+      "Using the  ChromaKeyVersion3  method on picture 1 results in an average pixel difference to the ideal result of 6.33 and  83.2 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion3  method on picture 2 results in an average pixel difference to the ideal result of 21.36 and  72.73 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion3  method on picture 3 results in an average pixel difference to the ideal result of 6.27 and  85.82 % pixels that could be keyed correctly\n",
+      "Using the  ChromaKeyVersion3  method on picture 4 results in an average pixel difference to the ideal result of 11.9 and  86.0 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1051,10 +1051,10 @@
      "output_type": "stream",
      "text": [
       "ColorKey :\n",
-      "Using the  ColorKey  method on picture 1 results in an average pixel difference to the ideal result of 2.68\n",
-      "Using the  ColorKey  method on picture 2 results in an average pixel difference to the ideal result of 0.75\n",
-      "Using the  ColorKey  method on picture 3 results in an average pixel difference to the ideal result of 1.57\n",
-      "Using the  ColorKey  method on picture 4 results in an average pixel difference to the ideal result of 0.83\n"
+      "Using the  ColorKey  method on picture 1 results in an average pixel difference to the ideal result of 2.68 and  87.53 % pixels that could be keyed correctly\n",
+      "Using the  ColorKey  method on picture 2 results in an average pixel difference to the ideal result of 0.75 and  96.74 % pixels that could be keyed correctly\n",
+      "Using the  ColorKey  method on picture 3 results in an average pixel difference to the ideal result of 1.57 and  91.5 % pixels that could be keyed correctly\n",
+      "Using the  ColorKey  method on picture 4 results in an average pixel difference to the ideal result of 0.83 and  95.36 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1074,10 +1074,10 @@
      "output_type": "stream",
      "text": [
       "ColorKeyv2 :\n",
-      "Using the  ColorKeyv2  method on picture 1 results in an average pixel difference to the ideal result of 8.42\n",
-      "Using the  ColorKeyv2  method on picture 2 results in an average pixel difference to the ideal result of 5.37\n",
-      "Using the  ColorKeyv2  method on picture 3 results in an average pixel difference to the ideal result of 7.3\n",
-      "Using the  ColorKeyv2  method on picture 4 results in an average pixel difference to the ideal result of 5.42\n"
+      "Using the  ColorKeyv2  method on picture 1 results in an average pixel difference to the ideal result of 8.42 and  49.16 % pixels that could be keyed correctly\n",
+      "Using the  ColorKeyv2  method on picture 2 results in an average pixel difference to the ideal result of 5.37 and  65.64 % pixels that could be keyed correctly\n",
+      "Using the  ColorKeyv2  method on picture 3 results in an average pixel difference to the ideal result of 7.3 and  49.39 % pixels that could be keyed correctly\n",
+      "Using the  ColorKeyv2  method on picture 4 results in an average pixel difference to the ideal result of 5.42 and  58.39 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1158,7 +1158,6 @@
     "        \n",
     "        #save difference of color of every pixel to expected color\n",
     "        dif=abs(framecopy-resultcopy)\n",
-    "\n",
     "        \n",
     "        #plot result\n",
     "        plt.subplot(1, 4, i+1)\n",
@@ -1168,7 +1167,12 @@
     "        #calculate mean of dif\n",
     "        meanframe=np.mean(dif)\n",
     "        \n",
-    "        print(\"Using the \", keyingmethod.__name__, \" method on picture\", i+1, \"results in an average pixel difference to the ideal result of\", round(meanframe,2))\n",
+    "        correct_pixels_tolerance=3\n",
+    "        correct_pixels_matrix=np.where(dif<=correct_pixels_tolerance,1,0)\n",
+    "        correct_pixels=np.sum(correct_pixels_matrix)\n",
+    "        correct_pixels_percent= (correct_pixels/(width*height*3))*100 \n",
+    "        \n",
+    "        print(\"Using the \", keyingmethod.__name__, \" method on picture\", i+1, \"results in an average pixel difference to the ideal result of\", round(meanframe,2), \"and \",round(correct_pixels_percent,2), \"% pixels that could be keyed correctly\" )\n",
     "    plt.show()#plot all pictures for current method\n",
     "\n",
     "    "
@@ -1176,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1184,10 +1188,10 @@
      "output_type": "stream",
      "text": [
       "LumaKey :\n",
-      "Using the  LumaKey  method on picture 1 results in an average pixel difference to the ideal result of 46.14\n",
-      "Using the  LumaKey  method on picture 2 results in an average pixel difference to the ideal result of 43.02\n",
-      "Using the  LumaKey  method on picture 3 results in an average pixel difference to the ideal result of 47.86\n",
-      "Using the  LumaKey  method on picture 4 results in an average pixel difference to the ideal result of 41.7\n"
+      "Using the  LumaKey  method on picture 1 results in an average pixel difference to the ideal result of 46.14 and  45.04 % pixels that could be keyed correctly\n",
+      "Using the  LumaKey  method on picture 2 results in an average pixel difference to the ideal result of 43.02 and  42.12 % pixels that could be keyed correctly\n",
+      "Using the  LumaKey  method on picture 3 results in an average pixel difference to the ideal result of 47.86 and  39.58 % pixels that could be keyed correctly\n",
+      "Using the  LumaKey  method on picture 4 results in an average pixel difference to the ideal result of 41.7 and  49.4 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1207,10 +1211,10 @@
      "output_type": "stream",
      "text": [
       "LumaKeyv2 :\n",
-      "Using the  LumaKeyv2  method on picture 1 results in an average pixel difference to the ideal result of 3.49\n",
-      "Using the  LumaKeyv2  method on picture 2 results in an average pixel difference to the ideal result of 2.57\n",
-      "Using the  LumaKeyv2  method on picture 3 results in an average pixel difference to the ideal result of 12.62\n",
-      "Using the  LumaKeyv2  method on picture 4 results in an average pixel difference to the ideal result of 3.45\n"
+      "Using the  LumaKeyv2  method on picture 1 results in an average pixel difference to the ideal result of 3.49 and  85.99 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv2  method on picture 2 results in an average pixel difference to the ideal result of 2.57 and  95.63 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv2  method on picture 3 results in an average pixel difference to the ideal result of 12.62 and  82.03 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv2  method on picture 4 results in an average pixel difference to the ideal result of 3.45 and  91.39 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1230,10 +1234,10 @@
      "output_type": "stream",
      "text": [
       "LumaKeyv3 :\n",
-      "Using the  LumaKeyv3  method on picture 1 results in an average pixel difference to the ideal result of 3.84\n",
-      "Using the  LumaKeyv3  method on picture 2 results in an average pixel difference to the ideal result of 2.53\n",
-      "Using the  LumaKeyv3  method on picture 3 results in an average pixel difference to the ideal result of 2.56\n",
-      "Using the  LumaKeyv3  method on picture 4 results in an average pixel difference to the ideal result of 3.6\n"
+      "Using the  LumaKeyv3  method on picture 1 results in an average pixel difference to the ideal result of 3.84 and  87.25 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv3  method on picture 2 results in an average pixel difference to the ideal result of 2.53 and  95.99 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv3  method on picture 3 results in an average pixel difference to the ideal result of 2.56 and  90.98 % pixels that could be keyed correctly\n",
+      "Using the  LumaKeyv3  method on picture 4 results in an average pixel difference to the ideal result of 3.6 and  93.47 % pixels that could be keyed correctly\n"
      ]
     },
     {
@@ -1324,8 +1328,13 @@
     "        #calculate mean of dif\n",
     "        meanframe=np.mean(dif)\n",
     "        \n",
-    "        print(\"Using the \", keyingmethod.__name__, \" method on picture\", i+1, \"results in an average pixel difference to the ideal result of\", round(meanframe,2))\n",
-    "    plt.show()#shw all results of current method\n",
+    "        correct_pixels_tolerance=3\n",
+    "        correct_pixels_matrix=np.where(dif<=correct_pixels_tolerance,1,0)\n",
+    "        correct_pixels=np.sum(correct_pixels_matrix)\n",
+    "        correct_pixels_percent= (correct_pixels/(width*height*3))*100 \n",
+    "        \n",
+    "        print(\"Using the \", keyingmethod.__name__, \" method on picture\", i+1, \"results in an average pixel difference to the ideal result of\", round(meanframe,2), \"and \",round(correct_pixels_percent,2), \"% pixels that could be keyed correctly\" )\n",
+    "    plt.show()#show all results of current method\n",
     "\n",
     "\n"
    ]
