--- a/funcam_parameter_tester.ipynb
+++ b/funcam_parameter_tester.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d49fe8e",
+   "id": "a9bbedb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d77791ce",
+   "id": "3661df63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a372ce6d",
+   "id": "d5c00efa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7c21fa0",
+   "id": "58434c80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a691295d",
+   "id": "da5ec268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,13 +410,13 @@
     "original1 = cv2.imread(\"tests/testpicture1bluebg.png\")\n",
     "result1 = cv2.imread(\"tests/testpicture1result.png\")\n",
     "\n",
-    "original2 = cv2.imread(\"tests/testpicture2greenbg.png\")\n",
+    "original2 = cv2.imread(\"tests/testpicture2bluebg.png\")\n",
     "result2 = cv2.imread(\"tests/testpicture2result.png\")\n",
     "\n",
-    "original3 = cv2.imread(\"tests/testpicture3greenbg.png\")\n",
+    "original3 = cv2.imread(\"tests/testpicture3bluebg.png\")\n",
     "result3 = cv2.imread(\"tests/testpicture3result.png\")\n",
     "\n",
-    "original4 = cv2.imread(\"tests/testpicture4greenbg.png\")\n",
+    "original4 = cv2.imread(\"tests/testpicture4bluebg.png\")\n",
     "result4 = cv2.imread(\"tests/testpicture4result.png\")\n",
     "\n",
     "\n",
@@ -532,7 +532,209 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f709e75b",
+   "id": "4bc5a875",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed781150",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "143d0c07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4881d474",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e6ea46b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba730fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tests parameters of \n",
+    "#\n",
+    "#\n",
+    "\n",
+    "import numpy as np\n",
+    "import datetime, time\n",
+    "import sys\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#change to False to turn of video\n",
+    "showvideo=True\n",
+    "\n",
+    "#load test-images and ideal results\n",
+    "original1 = cv2.imread(\"tests/testpicture1greenbg.png\")\n",
+    "result1 = cv2.imread(\"tests/testpicture1result.png\")\n",
+    "\n",
+    "original2 = cv2.imread(\"tests/testpicture2greenbg.png\")\n",
+    "result2 = cv2.imread(\"tests/testpicture2result.png\")\n",
+    "\n",
+    "original3 = cv2.imread(\"tests/testpicture3greenbg.png\")\n",
+    "result3 = cv2.imread(\"tests/testpicture3result.png\")\n",
+    "\n",
+    "original4 = cv2.imread(\"tests/testpicture4greenbg.png\")\n",
+    "result4 = cv2.imread(\"tests/testpicture4result.png\")\n",
+    "\n",
+    "\n",
+    "#put functions and images into lists\n",
+    "imagelist=[original1,original2,original3,original4]\n",
+    "resultlist=[result1,result2,result3,result4]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#source:https://unsplash.com/photos/fJQSCxB18wE\n",
+    "alternate_background0= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "\n",
+    "#alternate_background= cv2.imread(\"white.png\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "frame=cv2.imread(\"tests/testpicture1bluebg.png\")\n",
+    "height,width, channels = frame.shape\n",
+    "#resize background to frame\n",
+    "#alternate_background = cv2.resize(alternate_background, (width,height))\n",
+    "\n",
+    "saveframes=False\n",
+    "framecounter=0\n",
+    "distances2=np.zeros((height,width,3), np.uint8)\n",
+    "framenumber=0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def ChromaKeyVlahosv1(frame4, threshold):\n",
+    "    global framecounter\n",
+    "    global distances2\n",
+    "    \n",
+    "    framecounter+=1\n",
+    "    \n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "   \n",
+    "    #convert every pixel in frame from rgb to yuv\n",
+    "    yuv = cv2.cvtColor(frame4, cv2.COLOR_RGB2YUV)\n",
+    "    \n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    distances=np.zeros((width,height,1))\n",
+    "    \n",
+    "    distances[:,:,0]=np.abs(frame_b[:,:,0]- np.maximum(frame_g[:,:,0],frame_r[:,:,0]))\n",
+    "    distances=np.where(distances>threshold,0,1)\n",
+    "\n",
+    "    #apply mask on frame\n",
+    "    resultimage[:,:,0]=((distances[:,:,0])*frame4[:,:,0])+((1-distances[:,:,0])*alternate_background[:,:,0])\n",
+    "    resultimage[:,:,1]=((distances[:,:,0])*frame4[:,:,1])+((1-distances[:,:,0])*alternate_background[:,:,1])\n",
+    "    resultimage[:,:,2]=((distances[:,:,0])*frame4[:,:,2])+((1-distances[:,:,0])*alternate_background[:,:,2])\n",
+    "\n",
+    "    return(resultimage) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range (0, len(imagelist)):\n",
+    "    \n",
+    "    #frame4= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    #set current input and expected output\n",
+    "    frame4=imagelist[i]\n",
+    "    result=resultlist[i]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    \n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    #make empty mask with same size as frame\n",
+    "    mask= np.zeros((width,height), np.uint8)\n",
+    "    \n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "    \n",
+    "    #show original frame\n",
+    "    #cv2.imshow('original',frame4)\n",
+    "    \n",
+    "    for x in np.arange(0,255):\n",
+    "        frame5=ChromaKeyVlahosv1(frame4,x)\n",
+    "        plot = plt.imshow(cv2.cvtColor(frame5, cv2.COLOR_RGB2BGR))\n",
+    "        dif=np.mean(abs(frame5-result))\n",
+    "        \n",
+    "        plt.title(\"Threshold:\"+ str(x)+ \", average difference: result1:\"+ str(dif))\n",
+    "        plt.axis('off')\n",
+    "            \n",
+    "        plt.show()\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    break\n",
+    "    #close window if esc is pressed\n",
+    "    key = cv2.waitKey(1)\n",
+    "    if key == 27: \n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "160f5c26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe0d94c7",
    "metadata": {},
    "outputs": [],
    "source": []
