--- a/funcam_tester3.ipynb
+++ b/funcam_tester3.ipynb
@@ -21,11 +21,11 @@
     "\n",
     "\n",
     "#CHANGE TO FALSE TO NOT SHOW VIDEO\n",
-    "showvideo=True\n",
+    "showvideo=False\n",
     "\n",
     "\n",
     "#TEST VERSION\n",
-    "testing=False\n",
+    "testing=True\n",
     "\n",
     "\n",
     "\n",
@@ -85,6 +85,13 @@
     "    global framecounter\n",
     "    global distances2\n",
     "    \n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    framecounter+=1\n",
     "    \n",
     "    #array that returns the result\n",
@@ -118,6 +125,14 @@
     "def ChromaKeyVlahosv2(frame4, alpha1, alpha2, threshold):\n",
     "    global framecounter\n",
     "    global distances2\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
     "    \n",
     "    framecounter+=1\n",
     "    \n",
@@ -160,6 +175,14 @@
     "    \n",
     "    global framecounter\n",
     "    global distances2\n",
+    "    \n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    framecounter+=1\n",
     "    \n",
     "    #array that returns the result\n",
@@ -222,12 +245,12 @@
     "    #if (framecounter==framenumber and saveframes):\n",
     "    #    cv2.imwrite(\"trimap.jpg\", distances2)\n",
     "        \n",
-    "    distances2[:,:,0]=(distances[:,:])*255\n",
-    "    distances2[:,:,1]=(distances[:,:])*255\n",
-    "    distances2[:,:,2]=(distances[:,:])*255\n",
+    "    #distances2[:,:,0]=(distances[:,:])*255\n",
+    "    #distances2[:,:,1]=(distances[:,:])*255\n",
+    "    #distances2[:,:,2]=(distances[:,:])*255\n",
     "        \n",
-    "    if (framecounter==framenumber and saveframes):\n",
-    "        cv2.imwrite(\"mask.jpg\", distances2)\n",
+    "    #if (framecounter==framenumber and saveframes):\n",
+    "    #   cv2.imwrite(\"mask.jpg\", distances2)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -245,6 +268,13 @@
     "    global framecounter\n",
     "    global distances2\n",
     "    framecounter+=1\n",
+    "    \n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
     "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
@@ -465,6 +495,13 @@
     "#Chroma Key 1a (yuv)----------------------------------------------------------------------------\n",
     "#Chroma Key (yuv version)\n",
     "def Chromav1a(frame4,threshold1,threshold2):\n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -631,6 +668,13 @@
     "#Chroma Key 2-------------------------------------------------------------------------------------\n",
     "#todo desc\n",
     "def Chromav2(frame4,threshold1):\n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "    \n",
@@ -683,6 +727,13 @@
     "\n",
     "#Chroma Key 3\n",
     "def Chromav3(frame4,threshold1):\n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "    \n",
@@ -739,6 +790,11 @@
     "#Color Key----------------------------------------------------------------------------------------------------\n",
     "\n",
     "def ColorKey(frame4,threshold1,threshold2):\n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -781,6 +837,12 @@
     "\n",
     "#Color Key v2\n",
     "def ColorKeyv2(frame4):\n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -860,6 +922,13 @@
     "        return (0.8*((distance[0]-threshold1)/(threshold2-threshold1)))\n",
     "    \n",
     "def LumaKey(frame4,threshold1,threshold2,tolerance1,tolerance2):\n",
+    "    \n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -886,7 +955,11 @@
     "\n",
     "def LumaKeyv2(frame4,threshold1):\n",
     "\n",
-    "\n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -912,7 +985,11 @@
     "\n",
     "    \n",
     "def LumaKeyv3(frame4,threshold1):#Schultz Version\n",
-    "\n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
     "    luma_key=0.5*255\n",
     "    tolerance=0.2*255\n",
     "    smoothness=0.1*255\n",
@@ -2079,7 +2156,7 @@
     "    #apply filter\n",
     "    #frame4=ChromaKeyVlahosv1(frame4,200)\n",
     "    #frame4=ChromaKeyVlahosv2(frame4,1.5,0.5,0)\n",
-    "    frame4=ChromaKeyPlusDespill(frame4,95,350,width,height)\n",
+    "    frame4=ChromaKeyPlusDespill(frame4,95,350,)\n",
     "    #frame4=ChromaKeyPlusDespillv2(frame4,95,105)\n",
     "    #frame4=Chromav1a(frame4,100,160)\n",
     "    #frame4=Chromav1b(frame4,120)\n",
@@ -2492,7 +2569,44 @@
     "import dis\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def TestFunction1Var(functionname,showprocess):\n",
+    "    \n",
+    "    \n",
+    "        #SET BACKGROUND\n",
+    "    #source:https://unsplash.com/photos/fJQSCxB18wE\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    #alternate_background= cv2.imread(\"white.png\")\n",
+    "    height,width, channels = original1.shape\n",
+    "\n",
+    "\n",
+    "\n",
+    "    saveframes=False\n",
+    "    framecounter=0\n",
+    "    distances2=np.zeros((height,width,3), np.uint8)\n",
+    "\n",
+    "    framenumber=0\n",
+    "\n",
+    "    #PARAMETERS AND ARRAYS ONLY USED FOR CHROMAV1B\n",
+    "    counter=2\n",
+    "    counterprev=1 \n",
+    "    #initialize array for saving current mean of all frames\n",
+    "    meanimage=np.zeros((height,width,3), np.uint8)\n",
+    "    framecopy=np.zeros((height,width,3))\n",
+    "    #make copy of meanimage for calculations outside of rgb color space\n",
+    "    meanimagecopy=np.zeros((height,width,3))\n",
+    "    #initialize meanimage with first frame\n",
+    "    meanimage=frame\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    idealresult=255\n",
     "    indealthreshold=1000\n",
     "    for x in np.arange(0,255):\n",
@@ -2534,7 +2648,7 @@
     "        plt.show()\n",
     "    \n",
     "    \n",
-    "        print(str(idealresult),str(idealthreshold))\n",
+    "\n",
     "    \n",
     "        #close window if esc is pressed\n",
     "        key = cv2.waitKey(1)\n",
@@ -2546,6 +2660,34 @@
     "    \n",
     "    \n",
     "def TestFunction2Var(functionname,showprocess):\n",
+    "    \n",
+    "    #SET BACKGROUND\n",
+    "    #source:https://unsplash.com/photos/fJQSCxB18wE\n",
+    "    alternate_background= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    #alternate_background= cv2.imread(\"white.png\")\n",
+    "    height,width, channels = original1.shape\n",
+    "\n",
+    "\n",
+    "\n",
+    "    saveframes=False\n",
+    "    framecounter=0\n",
+    "    distances2=np.zeros((height,width,3), np.uint8)\n",
+    "\n",
+    "    framenumber=0\n",
+    "\n",
+    "    #PARAMETERS AND ARRAYS ONLY USED FOR CHROMAV1B\n",
+    "    counter=2\n",
+    "    counterprev=1 \n",
+    "    #initialize array for saving current mean of all frames\n",
+    "    meanimage=np.zeros((height,width,3), np.uint8)\n",
+    "    framecopy=np.zeros((height,width,3))\n",
+    "    #make copy of meanimage for calculations outside of rgb color space\n",
+    "    meanimagecopy=np.zeros((height,width,3))\n",
+    "    #initialize meanimage with first frame\n",
+    "    meanimage=frame\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    idealresult=255\n",
     "    indealthreshold=1000\n",
     "    for x in np.arange(0,255):\n",
@@ -2553,7 +2695,9 @@
     "            dif=0\n",
     "            plt.title(\"Threshold:\"+ str(x))\n",
     "            for i in range (0, len(imagelist)):\n",
-    "    \n",
+    "                \n",
+    "                \n",
+    "                \n",
     "                #frame4= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
     "                #set current input and expected output\n",
     "                frame4=imagelist[i]\n",
@@ -2562,10 +2706,6 @@
     "                width, height, channels = frame4.shape\n",
     "                \n",
     "                result=resultlist[i]\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "                \n",
     "    \n",
     "                alternate_background= alternate_background0[0:width,0:height]\n",
     "    \n",
@@ -2577,14 +2717,14 @@
     "    \n",
     "                #show original frame\n",
     "                #cv2.imshow('original',frame4)\n",
-    "                frame5=functionname(frame4,x,y,width,height)\n",
+    "            \n",
+    "                frame5=functionname(frame4,x,y)\n",
     "                dif+=np.mean(abs(frame5-result))\n",
     "                if (showprocess):\n",
     "                    plt.subplot(1, 4, i+1)\n",
-    "                    \n",
     "                    plot = plt.imshow(cv2.cvtColor(frame5, cv2.COLOR_RGB2BGR))\n",
     "                    \n",
-    "        \n",
+    "\n",
     "        plt.axis('off')\n",
     "        dif=dif/4\n",
     "        if (dif<idealresult):\n",
@@ -2593,7 +2733,7 @@
     "        plt.show()\n",
     "    \n",
     "    \n",
-    "        print(str(idealresult),str(idealthreshold))\n",
+    "\n",
     "    \n",
     "        #close window if esc is pressed\n",
     "        key = cv2.waitKey(1)\n",
@@ -2603,7 +2743,10 @@
     "    cv2.destroyAllWindows()\n",
     "    \n",
     "    \n",
-    "TestFunction2Var(ChromaKeyPlusDespill,True)"
+    "TestFunction2Var(ChromaKeyPlusDespill,True)\n",
+    "\n",
+    "    \n",
+    "TestFunction2Var(ChromaKeyPlusDespillv2,True)"
    ]
   },
   {
